# sqlpilot

./: .eslintrc.cjs  .gitattributes  .gitignore  .npmrc  LICENSE  Makefile  README.md  docker-compose.test.yml  dprint.json  eslint.config.js  index.html  lefthook.yml  opencode.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.browser.config.ts  vitest.config.ts  vitest.workspace.ts
.github/: AGENTS.md  FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  dprint-update.yml  release.yml
.opencode/: AGENTS.md
.opencode/agent/: ci-doctor.md  doc-keeper.md  implementer-frontend.md  implementer-rust.md  issue-reviewer.md  release-cutter.md  reviewer.md  scout.md
.opencode/command/: bump.md  doc-keeper.md  review-prs.md  reviewissues.md
.opencode/commands/: findissues.md  reviewissues.md
.opencode/ops/: cargo-audit-fix-plan.md
docs/: RELEASING.md  SECURITY.md
docs/design/: ARCHITECTURE.md  DESIGN_REQUIREMENTS.md  DEVELOPMENT_PLAN.md  TECH_DECISIONS.md  TESTING_STRATEGY.md
scripts/: cargo-audit-check.sh  check-deps.mjs  check-release-readiness.sh  dev.sh  doc-keeper-sweep.sh  issues-review.sh
src/: App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  build.rs  query-results-2026-04-05T00-56-53.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/mas-admin/: Cargo.toml
src-tauri/crates/mas-admin/src/: lib.rs
src-tauri/crates/mas-admin/tests/: integration_tests.rs
src-tauri/crates/mas-ai/: Cargo.toml
src-tauri/crates/mas-ai/src/: context.rs  conversation.rs  copilot.rs  error.rs  lib.rs  models.rs  ollama.rs  prompts.rs  provider.rs  service.rs  tools.rs
src-tauri/crates/mas-ai/tests/: data_layer.rs
src-tauri/crates/mas-core/: Cargo.toml
src-tauri/crates/mas-core/src/: error.rs  lib.rs
src-tauri/crates/mas-core/src/connection/: manager.rs  migrations.rs  mod.rs  store.rs
src-tauri/crates/mas-core/src/models/: connection.rs  query.rs
src-tauri/crates/mas-core/src/query/: executor.rs  mod.rs
src-tauri/crates/mas-core/src/schema/: inspector.rs  mod.rs
src-tauri/crates/mas-core/tests/: integration_tests.rs  query_database_context_regression.rs
src-tauri/crates/mas-export/: Cargo.toml
src-tauri/crates/mas-export/src/: lib.rs
src-tauri/crates/mas-sqlite/: Cargo.toml
src-tauri/crates/mas-sqlite/src/: connection.rs  error.rs  lib.rs  query.rs  schema.rs
src-tauri/crates/mas-sqlite/tests/: integration_tests.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs
src-tauri/src/commands/: ai.rs  mod.rs  sqlite.rs
src/__tests__/: App.test.tsx  main.browser.test.tsx  main.test.tsx
src/components/admin/: AdminPanel.tsx  ChangePasswordDialog.tsx  CreateUserDialog.tsx  UserManagement.tsx  userPrivileges.ts
src/components/admin/__tests__/: AdminPanel.test.tsx  ChangePasswordDialog.test.tsx  CreateUserDialog.test.tsx  UserManagement.test.tsx  userPrivileges.test.ts
src/components/ai/: AIChatPanel.tsx  ChatMessage.tsx  ModeSelector.tsx  NLToSQLInput.tsx  ToolCallBlock.tsx
src/components/ai/__tests__/: AIChatPanel.test.tsx  ChatMessage.test.tsx  ModeSelector.test.tsx  ToolCallBlock.test.tsx
src/components/backup/: BackupDialog.tsx  RestoreDialog.tsx
src/components/backup/__tests__/: BackupDialog.test.tsx  RestoreDialog.test.tsx
src/components/common/: ConfirmDialog.tsx  ContextMenu.tsx  ErrorBoundary.tsx  ShortcutsDialog.tsx
src/components/common/__tests__/: ConfirmDialog.test.tsx  ContextMenu.test.tsx  ErrorBoundary.test.tsx  ShortcutsDialog.test.tsx
src/components/compare/: SchemaCompare.tsx  SyncPreview.tsx
src/components/connection/: ConnectionDialog.tsx
src/components/designer/: SQLPreviewDialog.tsx  TableDesigner.tsx
src/components/editor/: EditorTabs.tsx  FormatterSettingsDialog.tsx  QueryToolbar.tsx  SQLEditor.tsx
src/components/explain/: ExplainPanel.tsx
src/components/favorites/: QueryFavorites.tsx  SaveFavoriteDialog.tsx
src/components/grid/: CellViewerModal.tsx  EditToolbar.tsx  EditableCell.tsx  ResultsGrid.tsx  TruncatedCell.tsx
src/components/history/: QueryHistory.tsx
src/components/import/: ImportDialog.tsx
src/components/layout/: AppLayout.tsx  ConnectionTabs.tsx  MainPanel.tsx  MenuBar.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  Toolbar.tsx
src/components/querybuilder/: QueryBuilder.tsx
src/components/routine/: RoutineViewer.tsx
src/components/schema/: FolderNode.tsx  SchemaTree.tsx  TableStructure.tsx
src/hooks/: useClickHandler.ts  useContextMenu.ts  useGridEditing.ts  useKeyboardShortcuts.ts  useQueryExecution.ts  useSchemaCache.ts  useTheme.ts
src/hooks/__tests__/: useClickHandler.test.ts  useContextMenu.test.ts  useGridEditing.test.ts  useKeyboardShortcuts.test.ts  useQueryExecution.test.ts  useSchemaCache.test.ts  useTheme.test.ts
src/lib/: backup-generator.ts  csv-parser.ts  ddl-generator.ts  query-builder-engine.ts  routine-parser.ts  schema-completion-provider.ts  schema-diff.ts  sql-generator.ts  sql-import.ts  sql-post-process.ts  statement-at-cursor.ts  sync-sql-generator.ts  tauri-api.ts
src/lib/__tests__/: backup-generator-pure.test.ts  backup-generator.test.ts  csv-parser.test.ts  ddl-generator.test.ts  query-builder-engine.test.ts  routine-parser.test.ts  schema-completion-provider.test.ts  schema-diff.test.ts  sql-generator.test.ts  sql-import.test.ts  sql-post-process.test.ts  statement-at-cursor.test.ts  sync-sql-generator.test.ts  tauri-api.test.ts  utils.test.ts
src/stores/: aiStore.ts  connectionStore.ts  editorStore.ts  favoritesStore.ts  historyStore.ts  resultStore.ts  settingsStore.ts  themeStore.ts
src/stores/__tests__/: aiStore.test.ts  connectionStore.test.ts  editorStore.test.ts  favoritesStore.test.ts  historyStore.test.ts  resultStore.test.ts  settingsStore.test.ts  themeStore.test.ts
src/styles/: globals.css
src/types/: index.ts
src/types/__tests__/: index.test.ts
tests/e2e/: main.spec.ts
tests/fixtures/sql/: seed.sql  seed_large.sql
tests/fixtures/ssl/: generate-certs.sh  my.cnf
(+40 files in other folders)
