[workspace]
members = [".", "crates/mas-core", "crates/mas-export", "crates/mas-admin", "crates/mas-ai", "crates/mas-sqlite"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "chrono", "json", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri = { version = "2", features = [] }

[package]
name = "sqlpilot"
version = "0.2.1"
edition = "2021"
description = "AI-powered MySQL GUI management tool"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
mas-core = { path = "crates/mas-core" }
mas-export = { path = "crates/mas-export" }
mas-admin = { path = "crates/mas-admin" }
mas-ai = { path = "crates/mas-ai", optional = true }
mas-sqlite = { path = "crates/mas-sqlite" }
uuid = { workspace = true }
dirs = "6"
rfd = "0.17"
keyring-core = "1"

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0", features = ["keychain"] }

[lib]
name = "sqlpilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
beta-ai = ["dep:mas-ai"]
custom-protocol = ["tauri/custom-protocol"]
