[workspace]
members = [".", "crates/mas-admin", "crates/mas-ai", "crates/mas-core", "crates/mas-export", "crates/mas-sqlite"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "chrono", "json", "uuid"] }
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[package]
name = "sqlpilot"
version = "0.3.4"
edition = "2021"
description = "AI-powered MySQL GUI management tool"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
keyring-core = "1"
mas-admin = { path = "crates/mas-admin" }
mas-ai = { path = "crates/mas-ai", optional = true }
mas-core = { path = "crates/mas-core" }
mas-export = { path = "crates/mas-export" }
mas-sqlite = { path = "crates/mas-sqlite" }
rfd = "0.17"
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2.10.1"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0", features = ["keychain"] }

[lib]
name = "sqlpilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
beta-ai = ["dep:mas-ai"]
custom-protocol = ["tauri/custom-protocol"]
