[package]
name = "mas-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
mas-core = { path = "../mas-core" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
uuid = { workspace = true }
