[package]
name = "mas-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
mas-core = { path = "../mas-core" }
