[package]
name = "mas-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
dashmap = "5"
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
mas-export = { path = "../mas-export" }
mas-admin = { path = "../mas-admin" }
