[package]
name = "mas-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
anyhow = "1"
tokio = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = "6"
