[package]
name = "mas-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { workspace = true }
dashmap = "6"
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
